--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -56,5 +56,17 @@
       </ChoiceBox>
 
       <TextField fx:id="orderingAtt" layoutX="386.0" layoutY="268.0" />
+      <ChoiceBox fx:id="multOption" layoutX="928.0" layoutY="268.0" prefWidth="150.0">
+          <items>
+              <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="Union" />
+                  <String fx:value="Intersect" />
+                  <String fx:value="Except" />
+              </FXCollections>
+          </items>
+      </ChoiceBox>
+      <Label layoutX="919.0" layoutY="236.0" text="Union / Intersect / Except" />
+      <Button fx:id="nextButton" layoutX="977.0" layoutY="313.0" mnemonicParsing="false" onAction="#storeResults" text="Next" />
+      <Button layoutX="156.0" layoutY="268.0" mnemonicParsing="false" onAction="#newQuery" text="Reset Query" />
    </children>
 </Pane>
