--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -13,8 +12,8 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <TextArea fx:id="queryTextArea" layoutX="215.0" layoutY="380.0" prefHeight="81.0" prefWidth="771.0" />
-      <Button fx:id="queryButton" layoutX="570.0" layoutY="485.0" mnemonicParsing="false" onAction="#showQuery" text="Query" />
+      <TextArea fx:id="queryTextArea" layoutX="215.0" layoutY="420.0" prefHeight="81.0" prefWidth="771.0" />
+      <Button fx:id="queryButton" layoutX="570.0" layoutY="505.0" mnemonicParsing="false" onAction="#showQuery" text="Query" />
       <TableView fx:id="queryResultTable" layoutX="215.0" layoutY="534.0" prefHeight="445.0" prefWidth="771.0">
         <columns>
         </columns>
@@ -23,10 +22,10 @@
       <Label layoutX="868.0" layoutY="44.0" text="Enter Attributes (comma separated)" />
       <TextField fx:id="tableName" layoutX="111.0" layoutY="87.0" />
       <TextField fx:id="attributes" layoutX="892.0" layoutY="87.0" />
-      <Button fx:id="parse" layoutX="538.0" layoutY="328.0" mnemonicParsing="false" onAction="#parseQuery" text="Show my Query" />
-      <Label layoutX="559.0" layoutY="125.0" text="Conditionals" />
-      <TextField fx:id="condAttribute" layoutX="275.0" layoutY="189.0" />
-      <ChoiceBox fx:id="condRel" layoutX="525.0" layoutY="189.0" prefWidth="150.0">
+      <Button fx:id="parse" layoutX="538.0" layoutY="388.0" mnemonicParsing="false" onAction="#parseQuery" text="Show my Query" />
+      <Label layoutX="569.0" layoutY="245.0" text="Conditionals" />
+      <TextField fx:id="condAttribute" layoutX="285.0" layoutY="289.0" />
+      <ChoiceBox fx:id="condRel" layoutX="535.0" layoutY="289.0" prefWidth="150.0">
           <items>
               <FXCollections fx:factory="observableArrayList">
                   <String fx:value="less than" />
@@ -40,11 +39,11 @@
               </FXCollections>
           </items>
       </ChoiceBox>
-      <TextField fx:id="condComp" layoutX="722.0" layoutY="189.0" />
-      <Label layoutX="339.0" layoutY="158.0" text="Attribute" />
-      <Label layoutX="573.0" layoutY="158.0" text="Relation" />
-      <Label layoutX="571.0" layoutY="236.0" text="Ordering" />
-      <ChoiceBox fx:id="orderOptions" layoutX="630.0" layoutY="268.0" prefWidth="150.0">
+      <TextField fx:id="condComp" layoutX="732.0" layoutY="289.0" />
+      <Label layoutX="349.0" layoutY="268.0" text="Attribute" />
+      <Label layoutX="583.0" layoutY="268.0" text="Relation" />
+      <Label layoutX="581.0" layoutY="326.0" text="Ordering" />
+      <ChoiceBox fx:id="orderOptions" layoutX="640.0" layoutY="348.0" prefWidth="150.0">
         <items>
             <FXCollections fx:factory="observableArrayList">
                 <String fx:value="Ascending" />
@@ -53,8 +52,8 @@
       </items>
       </ChoiceBox>
 
-      <TextField fx:id="orderingAtt" layoutX="386.0" layoutY="268.0" />
-      <ChoiceBox fx:id="multOption" layoutX="928.0" layoutY="268.0" prefWidth="150.0">
+      <TextField fx:id="orderingAtt" layoutX="396.0" layoutY="348.0" />
+      <ChoiceBox fx:id="multOption" layoutX="938.0" layoutY="348.0" prefWidth="150.0">
           <items>
               <FXCollections fx:factory="observableArrayList">
                   <String fx:value="Union" />
@@ -63,8 +62,22 @@
               </FXCollections>
           </items>
       </ChoiceBox>
-      <Label layoutX="919.0" layoutY="236.0" text="Union / Intersect / Except" />
-      <Button fx:id="nextButton" layoutX="977.0" layoutY="313.0" mnemonicParsing="false" onAction="#storeResults" text="Next" />
-      <Button layoutX="156.0" layoutY="268.0" mnemonicParsing="false" onAction="#newQuery" text="Reset Query" />
+      <Label layoutX="939.0" layoutY="326.0" text="Union / Intersect / Except" />
+      <Button fx:id="nextButton" layoutX="987.0" layoutY="393.0" mnemonicParsing="false" onAction="#storeResults" text="Next" />
+      <Button layoutX="166.0" layoutY="348.0" mnemonicParsing="false" onAction="#newQuery" text="Reset Query" />
+      <Label layoutX="16.0" layoutY="116.0" text="Table Names: customer, equipment, expenses, membership_plans, staff" />
+      <Label layoutX="548.0" layoutY="140.0" prefHeight="17.0" prefWidth="122.0" text="Aggregrate Functions" />
+      <ChoiceBox fx:id="aggreDropDown" layoutX="280.0" layoutY="200.0" prefWidth="150.0" >
+          <items>
+              <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="SUM" />
+                  <String fx:value="AVG" />
+              </FXCollections>
+          </items>
+      </ChoiceBox>
+      <Label layoutX="580.0" layoutY="171.0" text="Attribute" />
+      <Label layoutX="799.0" layoutY="171.0" text="GROUP BY" />
+      <TextField fx:id="aggreAttribute" layoutX="530.0" layoutY="200.0" />
+      <TextField fx:id="groupBy" layoutX="781.0" layoutY="200.0" />
    </children>
 </Pane>
