--- a/src/sample/insert.fxml
+++ b/src/sample/insert.fxml
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
 <AnchorPane prefHeight="1000.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.InsertController">
     <children>
-        <TextArea fx:id="queryTextArea" layoutX="215.0" layoutY="380.0" prefHeight="81.0" prefWidth="771.0" />
-        <Button fx:id="queryButton" layoutX="570.0" layoutY="485.0" mnemonicParsing="false" onAction="#showQuery" text="Query" />
-        <TableView fx:id="queryResultTable" layoutX="215.0" layoutY="534.0" prefHeight="445.0" prefWidth="771.0">
-            <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
-            </columns>
-        </TableView>
-        <Label layoutX="165.0" layoutY="44.0" text="Table Name" />
-        <Label layoutX="868.0" layoutY="44.0" text="Enter Values (comma separated)" />
-        <TextField fx:id="tableName" layoutX="111.0" layoutY="87.0" />
-        <Button fx:id="parse" layoutX="538.0" layoutY="328.0" mnemonicParsing="false" onAction="#parseQuery" text="Show my Query" />
-      <Label layoutX="502.0" layoutY="44.0" text="Attributes (comma separated)" />
-      <TextArea fx:id="insAttributes" layoutX="501.0" layoutY="87.0" prefHeight="81.0" prefWidth="200.0" />
-      <TextArea fx:id="insValues" layoutX="875.0" layoutY="87.0" prefHeight="81.0" prefWidth="200.0" />
+        <Label layoutX="517.0" layoutY="21.0" text="Authenticate" />
+        <Label layoutX="563.0" layoutY="51.0" text="Password" />
+        <TextField fx:id="username" layoutX="395.0" layoutY="47.0" />
+      <Label layoutX="328.0" layoutY="51.0" text="Username" />
+      <Label layoutX="489.0" layoutY="85.0" text="Add a new" />
+      <ChoiceBox fx:id="tableName" layoutX="563.0" layoutY="81.0" prefWidth="150.0">
+          <items>
+              <FXCollections fx:factory="observableArrayList">
+              <String fx:value="customer" />
+              <String fx:value="equipment" />
+              <String fx:value="expenses" />
+              <String fx:value="membership_plans" />
+              <String fx:value="staff" />
+              </FXCollections>
+          </items>
+      </ChoiceBox>
+      <PasswordField fx:id="password" layoutX="630.0" layoutY="47.0" />
+      <Button fx:id="queryButton" layoutX="559.0" layoutY="329.0" mnemonicParsing="false" text="Query" />
+      <Pane fx:id="customerPane" layoutX="161.0" layoutY="142.0" prefHeight="56.0" prefWidth="876.0">
+         <children>
+            <Label layoutX="28.0" layoutY="20.0" text="Member Name" />
+            <Label layoutX="447.0" layoutY="20.0" text="Membership Type" />
+         </children>
+      </Pane>
     </children>
 
 </AnchorPane>
