--- a/src/sample/insert.fxml
+++ b/src/sample/insert.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -29,7 +30,7 @@
           </items>
       </ChoiceBox>
       <PasswordField fx:id="password" layoutX="630.0" layoutY="47.0" />
-      <Button fx:id="queryButton" layoutX="559.0" layoutY="329.0" mnemonicParsing="false" onAction="#showQuery" text="Query" />
+      <Button fx:id="queryButton" layoutX="559.0" layoutY="329.0" mnemonicParsing="false" onAction="#showQuery" text="Show Query" />
       <Pane fx:id="customerPane" layoutX="161.0" layoutY="142.0" prefHeight="56.0" prefWidth="876.0" visible="false">
          <children>
             <Label layoutX="28.0" layoutY="20.0" text="Member Name" />
@@ -76,6 +77,7 @@
             <TextField fx:id="staffDivision" layoutX="559.0" layoutY="10.0" />
             <TextField fx:id="staffSalary" layoutX="76.0" layoutY="50.0" />
          </children></Pane>
+      <TextArea fx:id="queryTA" layoutX="150.0" layoutY="376.0" prefHeight="50.0" prefWidth="876.0" />
     </children>
 
 </AnchorPane>
