--- a/src/sample/insert.fxml
+++ b/src/sample/insert.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -43,10 +44,9 @@
          <children>
             <Label layoutX="20.0" layoutY="14.0" text="Machine Name" />
             <Label layoutX="424.0" layoutY="14.0" text="Quantity" />
-            <Label layoutX="20.0" layoutY="56.0" text="Working Properly" />
             <TextField fx:id="machineName" layoutX="140.0" layoutY="10.0" />
             <TextField fx:id="quantity" layoutX="481.0" layoutY="10.0" />
-            <TextField fx:id="workingProperly" layoutX="140.0" layoutY="52.0" />
+            <CheckBox fx:id="workingProperly" layoutX="25.0" layoutY="58.0" mnemonicParsing="false" text="Working Properly" />
          </children>
       </Pane>
       <Pane fx:id="expensesPane" layoutX="125.0" layoutY="142.0" prefHeight="50.0" prefWidth="966.0" visible="false">
@@ -78,6 +78,7 @@
             <TextField fx:id="staffSalary" layoutX="76.0" layoutY="50.0" />
          </children></Pane>
       <TextArea fx:id="queryTA" layoutX="150.0" layoutY="376.0" prefHeight="50.0" prefWidth="876.0" />
+      <Button layoutX="574.0" layoutY="448.0" mnemonicParsing="false" text="Execute" onAction="#evaluateQuery" />
     </children>
 
 </AnchorPane>
